--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ DB_HOST = 127.0.0.1
 DB_PORT = 3306
 DB_NAME = ncd_db
 DB_USER = root
-DB_PASSWORD = 
+DB_PASSWORD = root
 
-PORT = 5555
+PORT = 1990
 
 SECRET_KEY = abcdefg123456
