--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-DB_HOST = 127.0.0.1
+DB_HOST = 192.168.0.10
 DB_PORT = 3306
 DB_NAME = ncd_db
-DB_USER = root
-DB_PASSWORD = root
+DB_USER = kimniyom
+DB_PASSWORD = 0800260943
 
-PORT = 1990
+PORT = 80
 
 SECRET_KEY = abcdefg123456
